AG-14720 - fixed invisible borders taking space

--- a/community-modules/styles/src/internal/base/parts/_grid-layout.scss
+++ b/community-modules/styles/src/internal/base/parts/_grid-layout.scss
@@ -350,7 +350,7 @@
     .ag-floating-top:not(.ag-invisible) {
         border-bottom: var(--ag-borders-critical) var(--ag-border-color);
     }
-    .ag-floating-top:not(.ag-invisible) {
+    .ag-floating-bottom:not(.ag-invisible) {
         border-top: var(--ag-borders-critical) var(--ag-border-color);
     }
 
